--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
-  "private": true,
   "version": "4.2.0",
-  "name": "lightweight-charts",
+  "name": "lightweight-charts-fork",
   "author": "TradingView, Inc.",
   "license": "Apache-2.0",
   "description": "Performant financial charts built with HTML5 canvas",
@@ -10,7 +9,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/tradingview/lightweight-charts.git"
+    "url": "https://github.com/omnitaskba/lightweight-charts.git"
   },
   "module": "dist/lightweight-charts.production.mjs",
   "main": "index.cjs",
